adds samples from new agent